<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>radariq_ros_driver</name>
  <version>0.0.1</version>
  <description>The RadarIQ ROS Package, supports the RIQ-M model</description>

  <maintainer email="support@radariq.io">RadarIQ Support Team</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>radariq_interfaces</exec_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
